surefire settings enhanced to fix the vm crash under docker